--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -78,10 +78,11 @@
             position: absolute;
             left: 0;
             top: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%)
           }
         }
       }
+
     }
 
     button {
@@ -104,7 +105,7 @@
       }
 
       &:hover {
-        filter: brightness(0.95);
+       filter: brightness(0.95);
       }
     }
   }
@@ -116,8 +117,7 @@
   table {
     width: 100%;
 
-    td,
-    td {
+    th, td {
       padding: 0.75rem 1rem;
       border-bottom: 1px solid var(--gray-100);
     }
@@ -167,7 +167,7 @@
         }
 
         &:hover {
-          filter: brightness(0.95);
+        filter: brightness(0.95);
         }
       }
     }
